--- a/PortfolioGGG/src/app/components/header/header.component.html
+++ b/PortfolioGGG/src/app/components/header/header.component.html
@@ -1,4 +1,5 @@
-<div>
+<div class="col-xs-12 col-sm-12 cpl-md-12 col-lg-12">
     <app-logo-arg-prog></app-logo-arg-prog>
-
+    <app-redes></app-redes>
+    <app-banner></app-banner>
 </div>
