--- a/PortfolioGGG/src/app/components/informacion-ggg/informacion-ggg.component.html
+++ b/PortfolioGGG/src/app/components/informacion-ggg/informacion-ggg.component.html
@@ -6,7 +6,8 @@
 
     <div class="col-xs-12 col-sm-2 cpl-md-2 col-lg-2">
         <p>Gonzalo Adrian Gonzalez</p>
-        <P>Full Stack Develop Jr</P>
+        <P>Full Stack Developer Jr</P>
+        <p>Tecnico en redes de datos y telecomunicaciones</p>
     </div>
 
     <div class="col-xs-12 col-sm-8 cpl-md-8 col-lg-8">
