--- a/PortfolioGGG/src/app/app.component.html
+++ b/PortfolioGGG/src/app/app.component.html
@@ -1,2 +1,4 @@
 <app-header></app-header>
 <app-informacion-ggg></app-informacion-ggg>
+<app-laboral></app-laboral>
+<app-educacion></app-educacion>
