--- a/PortfolioGGG/src/app/components/informacion-ggg/informacion-ggg.component.html
+++ b/PortfolioGGG/src/app/components/informacion-ggg/informacion-ggg.component.html
@@ -5,7 +5,7 @@
     </div>
 
     <div class="col-xs-12 col-sm-2 cpl-md-2 col-lg-2">
-        <p>Gonzalo Adrian Gonzalez</p>
+        <p><strong>Gonzalo Adrian Gonzalez</strong></p>
         <P>Full Stack Developer Jr</P>
         <p>Tecnico en redes de datos y telecomunicaciones</p>
     </div>
