--- a/PortfolioGGG/src/app/app.component.html
+++ b/PortfolioGGG/src/app/app.component.html
@@ -2,3 +2,6 @@
 <app-informacion-ggg></app-informacion-ggg>
 <app-laboral></app-laboral>
 <app-educacion></app-educacion>
+<app-skills></app-skills>
+<app-proyectos></app-proyectos>
+<app-footer></app-footer>
