--- a/PortfolioGGG/src/app/components/logo-arg-prog/logo-arg-prog.component.html
+++ b/PortfolioGGG/src/app/components/logo-arg-prog/logo-arg-prog.component.html
@@ -1,1 +1,19 @@
-<img src="../../../assets/Arg-Prog-Logo.png" id="LogoArgProg">
+<div class="row">
+<div class="container">
+    <div class="logo">
+        <img src="../../../assets/Arg-Prog-Logo.png" id="LogoArgProg">
+    </div>
+    <div class="redes">
+        <div>
+            <img src="../../assets/facebook.png" id="Facebook" >
+            <img src="../../assets/Instagram.png" id="instagram">
+            <img src="../../assets/linkedin.png" id="linkedin">
+            <img src="../../assets/whatsapp.png" id="whatsapp">
+            <img src="../../assets/github.png" id="github">
+            <button type="button" class="btn btn-outline-dark">START</button>
+        </div>
+    </div>
+</div>
+</div>
+
+
