--- a/PortfolioGGG/Frontend/src/app/components/logo-arg-prog/logo-arg-prog.component.html
+++ b/PortfolioGGG/Frontend/src/app/components/logo-arg-prog/logo-arg-prog.component.html
@@ -5,15 +5,18 @@
     </div>
     <div class="redes">
         <div>
-            <img src="../../assets/facebook.png" id="Facebook" >
-            <img src="../../assets/Instagram.png" id="instagram">
-            <img src="../../assets/linkedin.png" id="linkedin">
-            <img src="../../assets/whatsapp.png" id="whatsapp">
-            <img src="../../assets/github.png" id="github">
-            <button type="button" class="btn btn-outline-dark">START</button>
+            <a href="https://www.facebook.com/gonxa87/" target="_blank"><img src="../../assets/facebook.png"></a>
+            <a href="https://www.instagram.com/gonzalito3g/" target="_blank"><img src="../../assets/Instagram.png"></a>
+            <a href="https://www.linkedin.com/in/gonzalo-adrian-gonzalez-castro-691839a0/" target="_blank"><img src="../../assets/linkedin.png"></a>
+            <a href="https://api.whatsapp.com/send/?phone=542612401793&text=Hola%2C+acabo+de+ver+tu+Portfolio+de+Argentina+Programa.&app_absent=0" target="_blank"><img src="../../assets/whatsapp.png"></a>
+            <a href="https://github.com/Gonzalito87" target="_blank"><img src="../../assets/github.png"></a>
+            <button type="button" (click)="login()" class="btn btn-outline-dark">START</button>
         </div>
     </div>
 </div>
 </div>
+
+
+
 
 
