--- a/PortfolioGGG/Frontend/src/app/app.component.html
+++ b/PortfolioGGG/Frontend/src/app/app.component.html
@@ -1,7 +1,1 @@
-<app-header></app-header>
-<app-informacion-ggg></app-informacion-ggg>
-<app-laboral></app-laboral>
-<app-educacion></app-educacion>
-<app-skills></app-skills>
-<app-proyectos></app-proyectos>
-<app-footer></app-footer>
+<router-outlet></router-outlet>
